adicionando projeto webnary ao heroku

--- a/webnary/src/main/webapp/index.html
+++ b/webnary/src/main/webapp/index.html
@@ -4,24 +4,24 @@
         <title>Index</title>
         <link type="text/css" rel="stylesheet" href="css/index.css">
         <meta charset="utf-8">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <!-- Compiled and minified CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+        <script src="https://code.jquery.com/jquery-3.0.0.js"></script>
+        <!-- Compiled and minified JavaScript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     </head>
     <body>
-        <div id="main">
+        <div id="main" class="z-depth-2">
             <div id="text">
-                <p>
-                Este questionário tem como intuito validar, através da ajuda de densevolvedores
-                respondendo a um breve questionário, a categorização dos métodos de algumas 
-                coleções do framework <b>JCF</b> (<b>J</b>ava <b>C</b>ollections <b>F</b>ramework) para um Tabalho de
-                Conclusão de Curso, as categorias foram definidas como: <i>(i)adição</i>, <i>(ii)remoção</i>, 
-                <i>(iii)busca</i>, <i>(iv)edição</i> e <i>(v)acesso</i>.
-                <br> O questionário consiste em cinco questões com sete alternativas geradas aleatoriamente,
-                dentro do conjunto de métodos considerados, você deverá selecionar as alternativas que acha
-                que pertencem a categoria informada na questão.
-                </p>
+                <blockquote style="font-size: 17px">
+                    Para responder a este questionário por favor logue com uma conta do Github.<br/>
+                    É importante confirmar que você também é um desenvolvedor.
+                </blockquote>
             </div>
             <div id="form_area">
                 <form method="POST" action="answer">
-                    <input type="submit" value="Inciar Questionário">
+                    <button type="submit" class="waves-effect waves-light btn">Prosseguir para a página de Login</button>
                 </form>
             </div>
         </div>
