resolvendo problema com dependencias

--- a/webnary/src/main/webapp/index.html
+++ b/webnary/src/main/webapp/index.html
@@ -23,8 +23,8 @@
                 <form method="POST" action="authorize">
                     <input type="hidden" name="client_id" value="eab855e1d491aab047ca"/>
                     <input type="hidden" name="client_secret" value="454426f6352c6e49b60d15bdabd0931ba561e82b"/>
-                    <input type="hidden" name="redirect_uri" value="https://pacific-scrubland-57068.herokuapp.com/callback"/>
-                    <!--<input type="hidden" name="redirect_uri" value="http://localhost:8080/webnary/callback"/>-->
+                    <!--<input type="hidden" name="redirect_uri" value="https://pacific-scrubland-57068.herokuapp.com/callback"/>-->
+                    <input type="hidden" name="redirect_uri" value="http://localhost:8080/webnary/callback"/>
                     <button type="submit" class="waves-effect waves-light btn">Prosseguir para a página de Login</button>
                 </form>
             </div>
