--- a/webnary/src/main/webapp/index.html
+++ b/webnary/src/main/webapp/index.html
@@ -15,8 +15,8 @@
         <div id="main" class="z-depth-2">
             <div id="text">
                 <blockquote style="font-size: 17px">
-                    Para responder a este questionário por favor logue com uma conta do Github.<br/>
-                    É importante confirmar que você também é um desenvolvedor.
+                    To answer this questionnaire, please login with a Github account.<br/>
+                    It's important confirm that you're a developer too.
                 </blockquote>
             </div>
             <div id="form_area">
@@ -25,7 +25,7 @@
                     <input type="hidden" name="client_secret" value="454426f6352c6e49b60d15bdabd0931ba561e82b"/>
                     <!--<input type="hidden" name="redirect_uri" value="https://pacific-scrubland-57068.herokuapp.com/callback"/>-->
                     <input type="hidden" name="redirect_uri" value="http://localhost:8080/webnary/callback"/>
-                    <button type="submit" class="waves-effect waves-light btn">Prosseguir para a página de Login</button>
+                    <button type="submit" class="waves-effect waves-light btn">Go to the login page</button>
                 </form>
             </div>
         </div>
